# hands-on-data-engineering

./: LICENSE  README.md  dir.py  guide.md  todolist.md
0_tech_specs/: README.md  pyproject.toml
0_tech_specs/diagrams/: data_pipeline.py  data_stage.py  example.py  sample.py
1_data_undercurrents/: build.sh
1_data_undercurrents/chart/airflow/: prod.values.yaml  test.values.yaml
1_data_undercurrents/chart/maindb/: Chart.yaml  maindb.sh  values.yaml
1_data_undercurrents/chart/maindb/templates/: maindb-configmap.yaml  maindb-deployment.yaml  maindb-pv-pvc.yaml  maindb-service.yaml
1_data_undercurrents/chart/postgres/: postgres-service.yaml  postgres-statefulset.yaml
1_data_undercurrents/docker/: airflow.Dockerfile
1_data_undercurrents/flyway/maindb_flyway/: .gitignore  flyway.toml
1_data_undercurrents/flyway/maindb_flyway/migrations/: V001_20230718005001__add_data_lake_total_visit_v1.sql  V002_20230718005336__add_data_lake_total_view_v1.sql  (+4 more)
1_data_undercurrents/requirements/: airflow.txt  base.txt
2_data_ingestors/requirements/: common.txt
2_data_ingestors/schema/: blog.py  dimension.py
3_data_pipeline/chart/: Chart.yaml  prod.values.yaml  test.values.yaml  values.yaml
3_data_pipeline/chart/templates/: _helpers.tpl  dag-data-persistent-volume-claim.yaml  dag-data-persistent-volume.yaml
3_data_pipeline/dag/: test_dag.py
3_data_pipeline/dags/dag/: test_dag.py
3_data_pipeline/dags/module/: utils.py
4_data_analytics/redash/: Chart.yaml  values.yaml
4_data_analytics/redash/templates/: _helpers.tpl  secrets.yaml  service.yaml
(+48 files in other folders)
