[tool.poetry]
name = "diagram"
version = "0.1.0"
description = ""
authors = ["kimyb132@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
diagrams = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
